--- a/src/components/NavBar/navBar.module.css
+++ b/src/components/NavBar/navBar.module.css
@@ -1,7 +1,4 @@
 
-ul{
-    list-style-type: none;
-}
 .navbar {
   display: flex;
   align-items: center;
@@ -11,7 +8,8 @@ ul{
   color: #fff;
 }
 
-.nav-links a {
+.navLinks a {
+  list-style-type: none;
   color: #fff;
 }
 
