--- a/src/components/NavBar/navBar.module.css
+++ b/src/components/NavBar/navBar.module.css
@@ -1,5 +1,6 @@
 
 .navbar {
+  /*@apply items-center justify-between p-20 bg-teal-400 text-white*/
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -15,6 +16,10 @@
 
 .logo {
   font-size: 32px;
+}
+
+.menuItems {
+  @apply hover:bg-purple-600
 }
 
 .menu {
