--- a/src/components/ItemCount/itemCount.module.css
+++ b/src/components/ItemCount/itemCount.module.css
@@ -1,5 +1,5 @@
 .cardProduct {
-    @apply py-8 px-8 max-w-sm mx-auto bg-gray-300 rounded-xl shadow-lg space-y-2 mt-3 justify-center items-center;
+    @apply py-8 px-8 max-w-sm mx-auto rounded-xl shadow-lg space-y-2 mt-3 justify-center items-center;
   }
   
   .button {
